# WatchClaw

./: README.md  pyproject.toml  watchclaw.sh  watchclaw.toml.example
.github/ISSUE_TEMPLATE/: false-positive.md  rule-request.md
examples/demo-openclaw/: README.md  openclaw.json  usage.jsonl  watchclaw-discord.txt  watchclaw-findings.json  watchclaw-report.md  watchclaw-summary.md
examples/demo-openclaw/.github/workflows/: demo.yml
examples/demo-openclaw/agents/main/sessions/: demo.jsonl
examples/demo-openclaw/cron/: jobs.json
examples/demo-openclaw/docs/: install.md
examples/demo-openclaw/workflows/: deploy.lobster
scripts/: build-post-image.sh  demo.sh  render_demo_screenshot.py
src/watchclaw/: __init__.py  cli.py  detector.py  fs.py  models.py  reporting.py  usage.py
src/watchclaw/checks/: docs.py  openclaw.py  workflows.py
tests/: test_detector.py  test_docs.py  test_openclaw.py  test_reporting.py  test_usage.py  test_workflows.py
